# boids

./: CMakeLists.txt
src/: main.cpp
